# sr-compute

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.cursor/rules/: sr-compute-overview.mdc
.github/: copilot-instructions.md
experiments/: __init__.py
experiments/polynomial_sweep/: __init__.py  analyze.py  arnold_classification_report.py  bimodal_basin_experiment.py  config.py  coupling_scale_experiment.py  ensemble_experiment.py  outcome_utils.py  parity_experiment.py  robustness_experiment.py  run.py  snapshot_experiment.py
experiments/polynomial_sweep/figures/: count_sequence.py  eta_ladder.py  sigma_window.py
experiments/polynomial_sweep/results/: analysis.txt  arnold_classification.txt  bimodal_basin_report.txt  coupling_scale_report.txt  ensemble_report.txt  robustness_report.txt  snapshot_report.txt  summary.json
models/: __init__.py
models/dim_1plus1/: __init__.py  cfe.py  mfe.py
shared/: brake.py  coupling.py  metrics.py  potentials.py  reconstruction.py  visualization.py
sr_compute/: README.md  __init__.py  diagnostics.py
tests/: test_1plus1_cfe.py  test_1plus1_mfe.py  test_arnold_class.py  test_brake.py  test_coupling.py  test_dim_1plus1_cfe.py  test_dim_1plus1_mfe.py  test_ensemble_experiment.py  test_metrics.py  test_potentials.py  test_reconstruction.py  test_robustness_experiment.py  test_snapshot_experiment.py  test_sweep_driver.py
