[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sr-compute"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
]

[project.optional-dependencies]
# Additional dependencies for disorder-spectrum and clinical notebook work.
clinical = [
    "mne",
    "h5py",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sr_compute*"]
